[gd_scene load_steps=3 format=3 uid="uid://dp57ql8bw65il"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_gotlr"]
[ext_resource type="AudioStream" uid="uid://c5c5i5k8r6qy3" path="res://Sounds/cardFan1.ogg" id="2_s6xyd"]

[node name="main" type="Node2D"]
script = ExtResource("1_gotlr")

[node name="debugButton" type="Button" parent="."]
offset_left = 992.0
offset_top = 640.0
offset_right = 1050.0
offset_bottom = 671.0
text = "Debug"

[node name="cardPos" type="Marker2D" parent="."]

[node name="cardShuffle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_s6xyd")

[connection signal="pressed" from="debugButton" to="." method="_on_debug_button_pressed"]
